fix closing etext + add spinners (#859)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -982,6 +982,9 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 }
 
 
+.etext-viewer-loader {
+   z-index:1000000;
+}
 
 /* ----------------------------- end new-UX/etext ---------------------------- */
 
