--- a/src/components/App.css
+++ b/src/components/App.css
@@ -151,7 +151,8 @@ footer#site-footer.no-syncs > div.head::before { background-color:#efefef; }
 .App:not(.home) { min-height:100vh;} 
 .App:not(.home) .SearchPane { min-height:calc(100vh - 80px - 50px * 0);  }
 
-[role='tooltip'] *, .App *,.nav *,.App *::before,.App *::after, .react-tabs *, .resource *:not(.fa):not(.material-icons), .resource + * *,
+
+#more-pages-menu a,[role='tooltip'] *, .App *,.nav *,.App *::before,.App *::after, .react-tabs *, .resource *:not(.fa):not(.material-icons), .resource + * *,
 .inRes *, #popDL.cite *, #menu-citationLang * { 
    font-family:"Noto Sans", "Noto Serif Tibetan", "Noto Serif Khmer", "Noto Sans Mongolian", "Roboto", "Helvetica", "Arial", sans-serif !important;
 }
@@ -624,6 +625,7 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 
 .nav a { text-decoration: none; font-size:0; display:inline-block; }
 
+#more-pages-menu a,
 .nav #logo.khmer + .links a,
 footer #donate,
 .nav a#about,
@@ -655,6 +657,7 @@ footer #donate,
 
 .nav #logo #by span { padding-top:7px; text-transform:none; letter-spacing: 1px; font-weight:600;}
 
+#more-pages-menu a,
 .nav a#collections,
 .nav a#about { color: #192229;} 
 
@@ -5544,6 +5547,10 @@ feedbucket-app:not(.on)  { display:none !important; }
 
 }
 
+#more-pages { display:none; margin-left:20px; cursor:pointer;}
+#more-pages-menu li:not(#a) { height:auto; padding:0; }
+#more-pages-menu li:not(#a) a { display:block; padding:12px 16px;}
+
 @media (max-width:1320px)
 {
    #latest .seeAll { margin-right:60px;}
@@ -5557,8 +5564,13 @@ feedbucket-app:not(.on)  { display:none !important; }
 
    .nav { padding-left:24px;padding-right:24px; max-width:100%; box-sizing: border-box;} 
 
+   #more-pages > span,
+   #more-pages { display:flex; align-items: center; }
+
+
    #about, 
-   #guide
+   #guide,
+   #new-search
    /* #about + a:not(#collections)  */
    { display:none;}
 
