add other versions + WIP: work author (#868)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1122,6 +1122,9 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
    line-height: 0;   
 }
 
+[data-prop="bdo:workHasInstance"] h4:not(#a) .images-thumb img { 
+   display:none;
+}
 
 /* ----------------------------- end new-UX/instance ---------------------------- */
 
