fix weird bug when reopening viewer (#868)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2617,6 +2617,8 @@ h4:not(:hover) > .lang
 .PE0 { pointer-events:none; cursor:auto; }
 
 
+.over-nav ~ .H100vh { z-index:1000000; position: relative; }
+
 
 #root > div > .resource.simple { cursor:pointer; padding-top:5px; }
 #root > div > .resource.simple > *    { pointer-events:none; }
