--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1189,6 +1189,10 @@ body > #pop-login { z-index:1000000 ;}
    display:none;
 }
 
+[data-prop="tmp:propHasScans"] h4:not(#a) a.error-401 {
+   display:none;
+}
+
 /* ----------------------------- end new-UX/instance ---------------------------- */
 
 .nav > div > div > a > img { vertical-align: middle;}
